--- a/index.html
+++ b/index.html
@@ -4,10 +4,101 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>JDM CARS</title>
     <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
+
   <body>
+    <header class="header">
+      <div class="container">
+        <div class="navbar">
+          <img class="logo" src="./img/logo.png" alt="logo" />
+          <div class="search-panel">
+            <input type="text" placeholder="Search" id="search" />
+            <button class="btn-search">
+              <img src="./img/search-icon.svg" alt="" />
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <div class="d-flex justify-content-center">
+      <form
+        id="add-form"
+        class="d-flex flex-column w-50 align-items-center mt-5"
+      >
+        <h2>Admin panel</h2>
+        <input
+          type="text"
+          class="mb-2 w-50 form-control inp"
+          placeholder="Carname"
+          id="carname"
+        />
+        <input
+          type="text"
+          class="mb-2 w-50 form-control inp"
+          placeholder="price"
+          id="price"
+        />
+        <input
+          type="text"
+          class="mb-2 w-50 form-control inp"
+          placeholder="description"
+          id="description"
+        />
+        <input
+          type="text"
+          class="mb-2 w-50 form-control inp"
+          placeholder="image URL"
+          id="image"
+        />
+        <button class="btn btn-danger w-30">Add JDM car</button>
+      </form>
+    </div>
+
+    <div id="car-list" class="d-flex flex-wrap justify-content-center">
+      <div class="card m-5" style="width: 18rem">
+        <img
+          src="https://www.motortrend.com/uploads/sites/25/2020/09/Top-20-JDM-Nissans-Hirokk-Koga-93-S13-Onevia-01.jpg?fit=around%7C875:492"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-danger">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Пагинация -->
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+        <li class="page-item prev">
+          <a class="page-link" href="#">Previous</a>
+        </li>
+        <!-- контейнер для кнопок страниц ( 1, 2, 3) -->
+        <div class="pag-list d-flex"></div>
+        <li class="page-item next"><a class="page-link" href="#">Next</a></li>
+      </ul>
+    </nav>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+
     <script src="./main.js"></script>
   </body>
 </html>
