--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
     />
   </head>
 
-  <body>
-    <header class="header">
+  <body class="body">
+    <header class="header z-1">
       <div class="container">
         <div class="navbar">
-          <img class="logo" src="./img/logo.png" alt="logo" />
+          <img
+            class="logo"
+            src="./img/pngtree-car-logo-vector-png-image_1811627.jpg"
+            alt="logo"
+          />
           <div class="search-panel">
             <input type="text" placeholder="Search" id="search" />
             <button class="btn-search">
@@ -34,7 +38,6 @@
         id="add-form"
         class="d-flex flex-column w-50 align-items-center mt-5"
       >
-        <h2>Admin panel</h2>
         <input
           type="text"
           class="mb-2 w-50 form-control inp"
@@ -59,9 +62,16 @@
           placeholder="image URL"
           id="image"
         />
-        <button class="btn btn-danger w-30">Add JDM car</button>
+        <button class="z-1 btn w-40 mt-5" id="btn">Add</button>
       </form>
     </div>
+
+    <section class="tree z-0">
+      <div>
+        <img class="tree-one" src="./img/sakura-tree-1.png" alt="" />
+        <img class="tree-two" src="./img/sakura-tree-2.png" alt="" />
+      </div>
+    </section>
 
     <div id="car-list" class="d-flex flex-wrap justify-content-center">
       <div class="card m-5" style="width: 18rem">
@@ -81,17 +91,95 @@
       </div>
     </div>
 
-    <!-- Пагинация -->
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center">
         <li class="page-item prev">
-          <a class="page-link" href="#">Previous</a>
+          <a class="page-link" href="#">Prev</a>
         </li>
-        <!-- контейнер для кнопок страниц ( 1, 2, 3) -->
-        <div class="pag-list d-flex"></div>
+        <div class="pag-list d-flex">1</div>
         <li class="page-item next"><a class="page-link" href="#">Next</a></li>
       </ul>
     </nav>
+
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <img src="./img/Copyrigt-icon.png" alt="" />
+          <h1>Copyright :</h1>
+          <p class="paragraph">Boki</p>
+          <p class="paragraph">Johny</p>
+          <p class="paragraph">Omka</p>
+        </div>
+      </div>
+    </footer>
+
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="d-flex flex-column w-100 align-items-center admin">
+              <h2>Edit cars</h2>
+              <input
+                type="text"
+                id="edit-car"
+                class="mb-2 w-100 form-control inp"
+                placeholder="edit carname"
+              />
+              <input
+                type="text"
+                id="edit-price"
+                class="mb-2 w-100 form-control inp"
+                placeholder="edit price"
+              />
+              <input
+                type="text"
+                id="edit-descr"
+                class="mb-2 w-100 form-control inp"
+                placeholder="edit description"
+              />
+              <input
+                type="text"
+                id="edit-image"
+                class="mb-2 w-100 form-control inp"
+                placeholder="edit URL"
+              />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button
+              type="button"
+              data-bs-dismiss="modal"
+              class="btn btn-primary"
+              id="btn-save-edit"
+            >
+              Save changes
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
